# dca

./: .gitignore  .gitignore.orig  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  configure.in
debian/: changelog  dirs
doc/: libdca.txt
include/: Makefile.am  audio_out.h  dca.h  dts.h
libao/: audio_out.c  audio_out_aif.c  audio_out_float.c  audio_out_null.c  audio_out_oss.c  audio_out_peak.c  audio_out_solaris.c  audio_out_wav.c  audio_out_win.c  convert2s16.c
libdca/: Makefile.am  bitstream.c  bitstream.h  dca_internal.h  downmix.c  dts_internal.h  libdca.pc.in  parse.c  tables_adpcm.h  tables_fir.h  tables_huffman.h  tables_quantization.h
libdts/: Makefile.am  bitstream.c  downmix.c  dts_internal.h  parse.c  tables_adpcm.h  tables_fir.h
projects/vs14/: dca.sln  dca.vcxproj  dca.vcxproj.filters
src/: Makefile.am  dcadec.c  dtsdec.c  extract_dts.c
tags/0.0.2/: bootstrap
tags/0.0.4/: NEWS  configure.ac
tags/0.0.4/include/: dts.h
tags/0.0.4/libao/: audio_out_aif.c  audio_out_float.c  audio_out_null.c  audio_out_peak.c
test/: compare.c
trunk/: ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  configure.in
trunk/debian/: Makefile.am  rules
trunk/include/: config.h.in  dca.h  dts.h
trunk/libao/: Makefile.am  audio_out_aif.c  audio_out_al.c  audio_out_float.c  audio_out_internal.h  audio_out_null.c  audio_out_oss.c  audio_out_peak.c  audio_out_solaris.c  audio_out_wav.c  audio_out_win.c  convert2s16.c
trunk/libdca/: Makefile.am  bitstream.c  bitstream.h  configure.incl  dca_internal.h  downmix.c  dts_internal.h  parse.c  tables.h  tables_adpcm.h  tables_fir.h  tables_huffman.h  tables_quantization.h  tables_vq.h
trunk/libdts/: Makefile.am  bitstream.c  bitstream.h  downmix.c  dts_internal.h  parse.c  tables.h  tables_adpcm.h  tables_huffman.h  tables_quantization.h
trunk/m4/: keywords.m4
trunk/src/: Makefile.am  dcadec.c  dtsdec.c  extract_dca.c  extract_dts.c
trunk/test/: Makefile.am  compare.c
trunk/vc++/: libao.dsp
vc++/: libdts.dsp
